--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <html>
  <head>
  <meta charset="utf-8">
- <title>Lew's Blog</title>
+ <title>永远的~</title>
      <style media="screen">
          * {
                  margin: 0;
