--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
  </body>
      <script type="text/javascript">
  				//将这个地址修改成需要的博客地址
-         window.location.href = "https://https://haokawx.lot-ml.com/Product/Index/83290"; 
+         window.location.href = "https://haokawx.lot-ml.com/Product/Index/83290"; 
      </script>
  </html>
